--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="flex items-center min-h-screen bg-white dark:bg-gray-900">
+<div class="flex items-center min-h-screen dark:bg-gray-900">
   <div class="container mx-auto">
     <div class="max-w-md mx-auto my-10">
       <div class="text-center">
