--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -33,7 +33,7 @@
       </table>
     </div>
     <div class="pt-2 m-3 flex justify-center" id="modal-close">
-      <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-5 rounded">
+      <button class="cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-5 rounded">
         閉じる
       </button>
     </div>
