--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -18,7 +18,7 @@
             <p class= "text-sm text-gray-400">例：hoshime@example.com</p>
           </div>
           <div class="mb-6">
-            <%= f.submit class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
+            <%= f.submit class: "cursor-pointer w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
