--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
       <div class="container px-4 mx-auto md:flex md:items-center">
         <div class="flex justify-between items-center">
           <%= link_to "Hoshime", root_path, class: "pb-1 font-bold text-3xl text-yellow-100" %>
-          <button class="border border-solid border-gray-100 px-3 py-1 rounded text-gray-100 opacity-50 hover:opacity-75 md:hidden" id="navbar-toggle">
+          <button class="cursor-pointer border border-solid border-gray-100 px-3 py-1 rounded text-gray-100 opacity-50 hover:opacity-75 md:hidden" id="navbar-toggle">
             <i class="fas fa-bars"></i>
           </button>
         </div>
