--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -35,7 +35,7 @@
             <% end %>
           </div>
           <div class="mb-6 flex justify-center">
-            <%= form.submit class: "mt-8 w-1/2 lg:w-1/4 px-1 py-2 lg:text-xl text-white bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
+            <%= form.submit class: "cursor-pointer mt-8 w-1/2 lg:w-1/4 px-1 py-2 lg:text-xl text-white bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
