--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,9 +5,9 @@
     </a>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 HoshiMe</p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <%= link_to "利用規約", "#", class: 'text-gray-500' %>｜
-      <%= link_to "プライバシーポリシー", "#", class: 'text-gray-500' %>｜
-      <%= link_to "お問い合わせ", "#", class: 'text-gray-500' %>
+      <%= link_to "利用規約", uses_path, class: 'text-gray-500' %>｜
+      <%= link_to "プライバシーポリシー", privacy_path, class: 'text-gray-500' %>｜
+      <%= link_to "お問い合わせ", new_contacts_path, class: 'text-gray-500' %>
     </span>
   </div>
 </footer>
