--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -43,7 +43,7 @@
   <h3>プライバシーポリシーの変更</h3>
     当社は、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。<br>
   <h3>お問い合わせ</h3>
-    お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、<%= link_to 'お問い合わせフォーム', "#", class: "copylight-link" %>よりご連絡ください。<br>
+    お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、<%= link_to 'お問い合わせフォーム', new_contacts_path %>よりご連絡ください。<br>
     この場合、必ず、運転免許証のご提示等当社が指定する方法により、ご本人からのご請求であることの確認をさせていただきます。なお、情報の開示請求については、開示の有無に関わらず、ご申請時に一件あたり1,000円の事務手数料を申し受けます。<br><br>
     事業者の名称<br>
       HoshiMe<br>
