--- a/app/views/static_pages/uses.html.erb
+++ b/app/views/static_pages/uses.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, t('.title')) %>
 
 <h1>利用規約</h1>
-  この利用規約（以下，「本規約」といいます。）は，emory（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。<br>
+  この利用規約（以下，「本規約」といいます。）は，HoshiMe（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。<br>
   登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。<br>
 
   <h3>第1条（適用）</h3>
