--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -38,4 +38,10 @@
       </div>
     </div>
   </div>
+
+  <div class="flex justify-center grid grid-col-1 py-5">
+    <div class="flex justify-center py-7">
+      <%= button_to "欲しいものを追加する", new_item_path, method: :get, class: "cursor-pointer font-semibold text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+    </div>
+  </div>
 </section>
