--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,7 @@
           </button>
         </div>
         <div class="hidden md:flex flex-col md:flex-row md:ml-auto mt-3 md:mt-0" id="navbar-collapse">
+          <%= link_to "欲しいもの追加", new_item_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
           <%= link_to "欲しいものリスト", items_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
           <%= link_to "マイページ", profiles_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
           <%= link_to "ログアウト", logout_path, method: :delete, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
