--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -18,9 +18,7 @@
               </tr>
             </thead>
             <tbody>
-              <div class="">
-                <%= render @calculations %>
-              </div>
+              <%= render @calculations %>
             </tbody>
           </table>
         </div>
@@ -37,11 +35,18 @@
   <p>欲しいものが登録されていません。</p>
 <% end %>
 
-<div class="flex justify-center grid grid-col-1 py-5">
-  <p class="text-center text-md lg:text-xl">ユーザー登録すると今登録したアイテムを引き継いで使うことができます。</p>
-  <div class="flex justify-center py-7">
-    <%= button_to "アカウント登録はこちら", new_user_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
-  </div>
+<div class="flex justify-center grid grid-col-1 pt-8 pb-5">
+  <% if current_user.guest? %>
+    <p class="text-center text-md lg:text-xl">ユーザー登録すると今登録したアイテムを引き継いで使うことができます。</p>
+    <div class="flex justify-center py-7">
+      <%= button_to "アカウント登録はこちら", new_user_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+    </div>
+  <% else %>
+    <p class="text-center text-md lg:text-xl">他に追加したいものはありませんか？</p></p>
+    <div class="flex justify-center py-7">
+      <%= button_to "欲しいものを追加する", new_item_path, method: :get, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+    </div>
+  <% end %>
 </div>
 
 <!-- Chart radar -->
